--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,21 @@ h1{
     flex-wrap:wrap;
 }
 
+.clb{
+    margin: 80px 0px 80px 0px;
+    display: flex;
+    flex-direction:column;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
 
+h6{
+   margin-top: 20px;
+    width: 45%;
+    padding: 20px 30px 20px 30px;
+    border: 3px solid rgba(0, 0, 0, 0.5);
+}
 
 .text{
     width: 100%;
@@ -60,11 +74,7 @@ h1{
     padding-top: 20px ;
 }
 
-.description .text2 {
-    width: 500px;
-    text-align:justify;
 
-}
 
 .description h3 {
     color: #434A85;
@@ -120,6 +130,31 @@ margin-top: 40px;
     justify-content: space-around;
 }
 
+.alls{
+    display: flex;
+    justify-content:center;
+    align-items:center;
+    max-width: 100%;
+    height:100%;
+}
+
+.alls img{
+    max-width: 100%;
+    max-height:100%;
+}
+
+.simg{
+    display: flex;
+    justify-content:center;
+    align-items:center;
+    max-width: 100%;
+    height:100%;
+}
+
+.simg img{
+    max-width: 60%;
+    max-height:60%;
+}
 
 
 /*=============================================
@@ -159,6 +194,7 @@ margin-top: 0px;
     justify-content: space-around;
     flex-wrap: wrap;
 }
+
 
 }
 
