--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ h1{
 
 h6{
    margin-top: 20px;
-    width: 45%;
+    width: 300px;
     padding: 20px 30px 20px 30px;
     border: 3px solid rgba(0, 0, 0, 0.5);
 }
